--- a/Unmixing/unmix.bib
+++ b/Unmixing/unmix.bib
@@ -80,3 +80,43 @@ keywords={feature extraction;geophysical signal processing;geophysical technique
 doi={10.1109/TGRS.2005.844293},
 ISSN={0196-2892},
 month={April},}
+
+@article{DBLP:journals/tgrs/IordacheBP12,
+  author    = {Marian{-}Daniel Iordache and
+               Jos{\'{e}} M. Bioucas{-}Dias and
+               Antonio Plaza},
+  title     = {Total Variation Spatial Regularization for Sparse Hyperspectral Unmixing},
+  journal   = {{IEEE} Trans. Geoscience and Remote Sensing},
+  volume    = {50},
+  number    = {11},
+  pages     = {4484--4502},
+  year      = {2012},
+  url       = {http://dx.doi.org/10.1109/TGRS.2012.2191590},
+  doi       = {10.1109/TGRS.2012.2191590},
+
+}
+
+
+@Article{Dobigeon_IEEE_Trans_SP_2009,
+  author       = {N. Dobigeon and S. Moussaoui and M. Coulon and J.-Y. Tourneret and A. O. Hero},
+  title        = {Joint {B}ayesian endmember extraction and linear unmixing for hyperspectral imagery},
+  journal      = {IEEE Trans. Signal Processing},
+  year         = 2009,
+  month        = {Nov.},
+  volume       = {57},
+  number       = {11},
+  pages        = {4355--4368},
+  webpage      = {http://dobigeon.perso.enseeiht.fr/applications/app_hyper_SMA.html},
+}
+
+
+@Article{Eches_IEEE_Trans_GRS_2011,
+  author       = {O. Eches and N. Dobigeon and J.-Y. Tourneret},
+  title        = {Enhancing hyperspectral image unmixing with spatial correlations},
+  journal      = {IEEE Trans. Geoscience and Remote Sensing},
+  year         = 2011,
+  month        = {Nov.},
+  volume       = {49},
+  number       = {11},
+  pages        = {4239--4247},
+}
