--- a/Introduction/introduction.tex
+++ b/Introduction/introduction.tex
@@ -1,4 +1,4 @@
-% Created 2017-03-21 Tue 15:37
+% Created 2017-04-24 Mon 11:12
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt,aspectratio=1610]{beamer}
 \usepackage[utf8]{inputenc}
@@ -50,7 +50,7 @@
 \tableofcontents
 \end{frame}
 
-\begin{frame}[label={sec:org021e7f9}]{Mathieu Fauvel}
+\begin{frame}[label={sec:org5ad7d50}]{Mathieu Fauvel}
 \begin{center}
 \begin{tabular}{ccc}
   \includegraphics[width=0.3\linewidth]{figures/logo-INRA-transp.png}
@@ -59,7 +59,14 @@
 \end{tabular}
 \end{center}
 \begin{itemize}
-\item Associate professor at  \href{http://ensat.fr/}{ENSAT} - \href{http://inp-toulouse.fr/}{INP Toulouse} \& \href{http://www.univ-toulouse.fr/}{University of Toulouse}
+\item Short CV
+\begin{itemize}
+\item 2004-2007: PhD \href{http://www.gipsa-lab.grenoble-inp.fr/}{GIPSA-lab} \& \href{http://english.hi.is/}{University of Iceland}
+\item 2007-2008: Assistant Professor \href{http://www.grenoble-inp.fr/}{Grenoble INP}
+\item 2008-2010: Post-Doc position INRIA \href{https://mistis.inrialpes.fr/index\_en.html}{Mistis Team}
+\item 2010-2011: Assistant Professor INP Toulouse
+\item Since 2011: Associate professor at  \href{http://ensat.fr/}{ENSAT} - \href{http://inp-toulouse.fr/}{INP Toulouse} \& \href{http://www.univ-toulouse.fr/}{University of Toulouse}
+\end{itemize}
 \item Director of the Engineering and Digital Sciences Department at the National Institute of Agronomy of Toulouse (ENSAT).
 \item Associated to the \href{http://dynafor.toulouse.inra.fr/}{DYNAFOR} lab
 \item IEEE GRSS:
@@ -71,8 +78,8 @@
 \end{itemize}
 \end{frame}
 \section{Introduction}
-\label{sec:org7bd4f50}
-\begin{frame}[label={sec:org8aeace8}]{Remote sensing}
+\label{sec:orged475bc}
+\begin{frame}[label={sec:org70bcf6f}]{Remote sensing}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -94,7 +101,7 @@ usually formated in terms of \emph{digital image data}.
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[fragile,label={sec:orge910115}]{Fields of application}
+\begin{frame}[fragile,label={sec:org77a89d7}]{Fields of application}
 \tikzset{grow cyclic list/.code={%
   \def\tikzgrowthpositions{{#1}}%
   \foreach \n [count=\i,remember=\i]in {#1}{}%
@@ -141,7 +148,7 @@ usually formated in terms of \emph{digital image data}.
     \end{tikzpicture}}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org4a95915}]{Hekla Volcano, Iceland}
+\begin{frame}[label={sec:org0ea3755}]{Hekla Volcano, Iceland}
 \begin{columns}
 \begin{column}{0.45\columnwidth}
 \begin{center}
@@ -161,10 +168,10 @@ usually formated in terms of \emph{digital image data}.
 \end{frame}
 
 \section{Hyperspectral imagery}
-\label{sec:orgb40c188}
+\label{sec:org699efba}
 \subsection{Element of physics}
-\label{sec:orgbdc7913}
-\begin{frame}[label={sec:org1d8cb1b}]{Electromagnetic wave}
+\label{sec:org80ad24c}
+\begin{frame}[label={sec:org56dfdc4}]{Electromagnetic wave}
 \begin{center}
 \begin{tikzpicture}[samples=100]
   \filldraw[domain=0:2*pi,color=blue,fill=blue!30] plot (\x,0,{2*sin(\x*2 r)});
@@ -195,14 +202,14 @@ usually formated in terms of \emph{digital image data}.
 \end{tikzpicture}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org1cc9ff0}]{Electromagnetic spectrum}
+\begin{frame}[label={sec:org0ba0602}]{Electromagnetic spectrum}
 \begin{center}
 \includegraphics[angle=-1,width=0.8\linewidth]{./figures/spectralInformation.pdf}
 \end{center}
 
 From \cite{manolakis2016hyperspectral}.
 \end{frame}
-\begin{frame}[label={sec:orgdb335d6}]{Spectral reflectance}
+\begin{frame}[label={sec:orgdfbf913}]{Spectral reflectance}
 \alert{Reflectance}: 
 \begin{itemize}
 \item Capacity of a given surface to reflect the incident light,
@@ -231,7 +238,7 @@ From \cite{manolakis2016hyperspectral}.
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orga3b99e5}]{Spectral reflectance curves}
+\begin{frame}[label={sec:org5c4744c}]{Spectral reflectance curves}
 \alert{Spectral reflectance curves or spectral signature}: Radiometric identity card
 
 \begin{center}
@@ -249,8 +256,8 @@ From \cite{manolakis2016hyperspectral}.
 \end{center}
 \end{frame}
 \subsection{Digital remote sensing images}
-\label{sec:orgbacae75}
-\begin{frame}[label={sec:orgfbb60a8}]{Remote sensing images}
+\label{sec:orgbb73aea}
+\begin{frame}[label={sec:org0f9aa03}]{Remote sensing images}
 \emph{A  remote sensing  image  is a  sampling of  a  spatial, spectral  and
 temporel process}.
 
@@ -284,7 +291,7 @@ temporel process}.
     \end{tikzpicture}
   \end{center}
 \end{frame}
-\begin{frame}[label={sec:org00b7562}]{Characteristics of remote sensing images}
+\begin{frame}[label={sec:orgf440330}]{Characteristics of remote sensing images}
 \begin{itemize}
 \item Spatial resolution: \emph{Ability to distinguish two closed objects}.
 \begin{center}
@@ -323,7 +330,7 @@ Panchromatic & 1\\
 Multispectral & \textasciitilde{} 10\\
 \midrule
 Hyperspectral & > 100\\
-Ultraspectral & > 100\\
+Ultraspectral & > 1000\\
 \bottomrule
 \end{tabular}
 \end{center}
@@ -331,7 +338,7 @@ Ultraspectral & > 100\\
 spatial \emph{and} spectral resolution at the same time.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org16e3762}]{Multispectral versus hyperspectral}
+\begin{frame}[label={sec:org40ee4bb}]{Multispectral versus hyperspectral}
 \begin{center}
 \begin{tikzpicture}[]
   \begin{axis}[,xmin=0.4,xmax=2.56,ymin=0,ymax=0.6,grid=both,width=0.9\linewidth,height=0.8\textheight,title=Pleiade versus Hypxim]
@@ -343,7 +350,7 @@ spatial \emph{and} spectral resolution at the same time.
   \end{tikzpicture}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org89e0878}]{Hyperspectral sensors}
+\begin{frame}[label={sec:orgd79589c}]{Hyperspectral sensors}
 \begin{center}
   \begin{tikzpicture}
   \begin{semilogxaxis}[grid=both,xlabel= \small Spatial resolution (in meters per pixel),ylabel=\small Number of spectral channels,legend style={cells={anchor=east},legend pos=outer north east,},width=0.9\linewidth,height=0.95\textheight,xmax=1300,ymin=0,ymax=320,every node near coord/.append style={font=\small}]      
@@ -354,8 +361,8 @@ spatial \emph{and} spectral resolution at the same time.
 \end{center}
 \end{frame}
 \subsection{Spectral signatures}
-\label{sec:org12c09fb}
-\begin{frame}[label={sec:org80bdd80}]{Vegetation 1/2}
+\label{sec:org52a91d1}
+\begin{frame}[label={sec:org1e1bfb3}]{Vegetation 1/2}
 Healthy vegetation (high photosynthesis)
 \begin{itemize}
 \item Absorption in \emph{blue} and \emph{red} domain,
@@ -367,7 +374,7 @@ Healthy vegetation (high photosynthesis)
 \includegraphics[width=0.5\linewidth]{./figures/spectral_curve_vegetation.jpg}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgf345344}]{Vegetation 2/2}
+\begin{frame}[label={sec:org048c017}]{Vegetation 2/2}
 \begin{columns}
 \begin{column}{0.35\columnwidth}
 Factor modifying the reflectance
@@ -395,7 +402,7 @@ Factor modifying the reflectance
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgf7bf4f3}]{Water}
+\begin{frame}[label={sec:orgfb57782}]{Water}
 \begin{center}
   \begin{tikzpicture}
     \begin{axis}[xmin=400,xmax=2500,ymin=0,ymax=0.1,grid,xlabel=$\lambda~({\mu}m)$,ylabel=Reflectance,width=0.9\linewidth,height=0.5\linewidth,cycle list name=color list,/pgf/number format/1000 sep={},/pgf/number format/fixed,]
@@ -424,7 +431,7 @@ Factor modifying the reflectance
   \end{tikzpicture}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orga2c8d8f}]{Human made materials}
+\begin{frame}[label={sec:org17a56d8}]{Human made materials}
 \begin{center}
   \begin{tikzpicture}
     \pgfplotsset{every axis legend/.append style={at={(0.5,1.03)},anchor=south}}
@@ -441,10 +448,10 @@ Factor modifying the reflectance
 \end{center}
 \end{frame}
 \section{Current challenges in hyperspectral}
-\label{sec:orgbdd33a6}
+\label{sec:orgee1b1f6}
 \subsection{What is remote sensing made of ?}
-\label{sec:org2487b88}
-\begin{frame}[label={sec:orgcaf6a57}]{An interdisciplinary field}
+\label{sec:org16913a6}
+\begin{frame}[label={sec:orgfe43285}]{An interdisciplinary field}
 \begin{center}
 \smartdiagramset{planet color=orange!60,
 distance planet-satellite=4cm
@@ -453,7 +460,7 @@ distance planet-satellite=4cm
 {\textsc{Hyperspectral}\\ \textsc{Remote Sensing},Computer \\Science,Signal and Image \\ Processing, Pattern \\Recognition, Physics, Environemental\\ Science}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgfcc2935}]{Processing chain}
+\begin{frame}[label={sec:orgd39d455}]{Processing chain}
 \smartdiagramset{uniform sequence color=true,
 sequence item border color=black,sequence item font size=\small,
 sequence item text color=white,sequence item text width=2.75cm
@@ -482,7 +489,7 @@ sequence item text color=white,sequence item text width=2.75cm
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org924a2f3}]{Hot topics}
+\begin{frame}[label={sec:org13c8377}]{Hot topics}
 \begin{center}
   \begin{tikzpicture}
     \begin{axis}[date coordinates in=x,xtick=data, ybar,title=Number of published papers per year about "hyperspectral remote sensing" (\emph{ISI Web of science}),width=0.9\linewidth,height=0.9\textheight,grid=both,date ZERO=1999-09-01,xmin=1999-09-01,xmax=2016-05-01,xticklabel style={rotate=45},xticklabel={\year},ymin=0,ymax=800]
@@ -509,8 +516,8 @@ sequence item text color=white,sequence item text width=2.75cm
 \end{center}
 \end{frame}
 \subsection{Current challenges}
-\label{sec:orgae0fe05}
-\begin{frame}[label={sec:org050ae68}]{Challenges}
+\label{sec:orgade0609}
+\begin{frame}[label={sec:org8565c00}]{Challenges}
 \begin{itemize}
 \item \uline{Pattern recognition}:
 \begin{itemize}
@@ -532,7 +539,7 @@ sequence item text color=white,sequence item text width=2.75cm
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2d676c0}]{Spectral variability}
+\begin{frame}[label={sec:org1f7f6ef}]{Spectral variability}
 \begin{center}
   \begin{tikzpicture}
     \begin{axis}[grid=both,width=\linewidth,height=0.5\linewidth,xmin=350,xmax=2400,ymin=0,ymax=0.5,mark=none,/pgf/number format/1000 sep={},/pgf/number format/fixed,thick,ticklabel style = {font=\footnotesize},title=Grasslands measurements]
@@ -565,8 +572,8 @@ sequence item text color=white,sequence item text width=2.75cm
 \end{center}
 \end{frame}
 \subsection{High dimensional data}
-\label{sec:org2a487c9}
-\begin{frame}[label={sec:orge221b7d}]{Properties of HD spaces 1/3}
+\label{sec:org30be812}
+\begin{frame}[label={sec:org39ee5f3}]{Properties of HD spaces 1/3}
 \begin{itemize}
 \item High number of measurements \(d\) but limited number \(n\) of samples.
 \item High dimensional space do not behave as low/moderate dimensional space \cite{661089}:
@@ -598,7 +605,7 @@ sequence item text color=white,sequence item text width=2.75cm
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org603bd26}]{Properties of HD spaces 2/3}
+\begin{frame}[label={sec:orgc4c7e73}]{Properties of HD spaces 2/3}
 Consider                                                             a
 r.v.      \(\mathbf{x}\sim\mathcal{N}(\mathbf{0},\mathbf{I})\).      The
 likelihood of \(t=\|\mathbf{x}\|\) is given by
@@ -624,7 +631,7 @@ which is maximum for \(t^*=\sqrt{d-1}\) \cite{661089}.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgb9c7f4e}]{Properties of HD spaces 3/3}
+\begin{frame}[label={sec:org76f7bef}]{Properties of HD spaces 3/3}
 \begin{itemize}
 \item \alert{Concentration of measure} phenomenon \cite{Aggarwal2001}: if \(\mathbf{x}\) r.v. with i.i.d variables
 $$ \frac{d_M(\mathbf{x})-d_m(\mathbf{x})}{d_M(\mathbf{x})}\to_{p} 0$$
@@ -637,7 +644,7 @@ for all Minkowski norm: \(\|\mathbf{x}\|=\big(\sum_{i=1}^{d}|x_i|^{p} \big)^{1/p
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org3ca8d90}]{Consequences for the analysis}
+\begin{frame}[label={sec:orga9d868f}]{Consequences for the analysis}
 \begin{itemize}
 \item Curse of dimensionality: Number of points to uniformly sample a unit hypercube (step=0.1)
   \begin{center}
@@ -664,8 +671,8 @@ value.}"
 \end{itemize}
 \end{frame}
 \section{Questions}
-\label{sec:org5f5d62e}
-\begin{frame}[label={sec:org996bea6}]{Is there a fake ?}
+\label{sec:org87856ac}
+\begin{frame}[label={sec:org4f480de}]{Is there a fake ?}
 \begin{onlyenv}<1>
 \begin{center}
 \includegraphics[width=0.9\linewidth]{./figures/demo.pdf}
@@ -703,7 +710,7 @@ value.}"
 \end{onlyenv}
 \end{frame}
 
-\begin{frame}[label={sec:org4163a37}]{Spectra}
+\begin{frame}[label={sec:org73f916a}]{Spectra}
 \pgfplotstableread{figures/cotton_spectra.txt}\loadedtable
 \begin{center}
 \begin{tikzpicture}\begin{axis}[xlabel=$\lambda$, ylabel=Reflectance,  xmin=0.4, xmax=2.5, ymin=0,   ymax=1, grid=both,width=0.9\textwidth, height=0.4\textwidth]
@@ -719,7 +726,7 @@ value.}"
 There are two spectra of the same material (cotton), before and after drying. Which are they ?
 \end{frame}
 
-\begin{frame}[label={sec:orga5de41a}]{Gaussian distribution}
+\begin{frame}[label={sec:org5560f7c}]{Gaussian distribution}
 What is the number of parameters to estimate for a Gaussian distribution
 
 \begin{itemize}
@@ -738,11 +745,11 @@ What is the number of parameters to estimate for a Gaussian distribution
 \end{block}
 \end{frame}
 \section{References}
-\label{sec:org5740153}
+\label{sec:org9f93bb7}
 \begin{frame}[fragile,allowframebreaks,label=]{Bibliography}
 \printbibliography
 \end{frame}
-\begin{frame}[label={sec:org8f4b839}]{}
+\begin{frame}[label={sec:org03a0d22}]{}
 \begin{center}
 \tiny Creative Commons Attribution-ShareAlike 4.0 Unported License
 \normalsize
