--- a/README.org
+++ b/README.org
@@ -5,7 +5,7 @@ This repository contains  all the files for  the course "Hyperspectral
 image  processing" given  in Algiers,  Algery for  the first  /Algerian
 Geoscience and Remote Sensing Spring School 2017/.
 
-It contains the following folders.
+It contains the following folders/files.
 
 #+BEGIN_SRC sh :exports results :results output
 tree -L 1
@@ -29,5 +29,11 @@ tree -L 1
 The folder  =Data= contains  the data  sets use  during the  school, for
 illustration and labworks. The folder  =Codes= contains all the python /
 OTB codes used to generate the results.
+
+The very last version can be found:
+
+#+BEGIN_CENTER
+[[https://github.com/mfauvel/SummerSchoolGRSS]]
+#+END_CENTER
 
 All this work is under the licence [[https://creativecommons.org/licenses/by-sa/4.0/][Creative Commons Attribution-ShareAlike 4.0]].
